	  retains the list of recent files. This is limited to the last 100 files, to
    keep the storage space and processing required small.
	- When opening files that were opened before, the cursor is set back to its
	  last used position. This is limited to the last 100 files, to keep the
	  storage space and processing required small.

Version 1.0.1:
	Bug fixes:
	- Writing of files has been completely re-written to ensure correct
	  preservation of permissions and ownerships of the file.

Version 1.0.0:
	This release is the first based on libt3widget 1.0.0. It does not provide
	new features.

Version 0.4.3:
	New features:
	- A new dialog is available that shows the codepoints under the cursor.

	Bug fixes:
	- Allow Private-Use Area characters in input and output without substituion.

Version 0.4.2:
	This release is a re-release of 0.4.1 which removes a non-functional file.

Version 0.4.1:
	Bug fixes:
	- Rewrite files in place if the owner of the file would be changed by
	  creating the file anew. This is a short-term solution for fixing
	  accidental ownership changes due to the scheme used by Tilde to prevent
	  file corruptions.
	- Guard against off-of-line cursor positions in finding next brace. This
	  could cause infinite loops in some cases.

Version 0.4.0:
	New features:
	- Allow writing files if the directory they are in is not writable for the
	  current user. This is ever so slightly more risky than creating a
	  temporary file and moving it over the existing one, which is the default
	  behavior.
	- Add menu items for the new Paste Selection (which pastes the X11 primary
	  selection) and for the new Delete Line actions.
	- Make it possible to disable claiming the primary selection, and to
	  automatically disable this when running over SSH. When running over SSH
	  on high-latency connections and while running a clipboard manager
	  locally, the primary selection claiming can make Tilde work slowly.

	Bug fixes: