@@ -35,6 +35,7 @@ class file_edit_window_t : public edit_window_t {
   file_buffer_t *get_text() const;
   void goto_matching_brace();
   void show_character_details();
+  void save_view_parameters_in_buffer();
 };
 
 #endif
